# pybox

./: .cookiecutter.json  .flake8  .gitignore  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.rst  README.md  README.rst  codecov.yml  noxfile.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.md  usage.rst
src/pybox/: __init__.py  __main__.py
src/pybox/commands/: __init__.py  gdriver.py
src/pyboxes/: __init__.py  __main__.py  utils.py
src/pyboxes/commands/: asyncdown.py  driverdown.py  gdriver.py  gfile.py  gfolder.py  request.py  slack.py
tests/: __init__.py  test_asyncdown.py  test_gfile.py  test_main.py  test_request.py  test_slack.py
