[tool.poetry]
name = "pyboxes"
version = "2.1.0"
description = "Pyboxes"
authors = ["yangli <li002252@umn.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cauliyang/pybox"
repository = "https://github.com/cauliyang/pybox"
documentation = "https://pyboxes.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
Changelog = "https://github.com/cauliyang/pybox/releases"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
loguru = ">=0.5.3,<0.7.0"
requests = "^2.26.0"
google-api-python-client = "^2.37.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = ">=0.4.6,<0.6.0"
aiofiles = "^0.8.0"
aiohttp = "^3.8.1"
types-aiofiles = "^0.8.8"
types-requests = "^2.27.25"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.3"}
safety = "^1.10.3"
mypy = "^0.950"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^1.0.0"}
sphinx = "^4.5.0"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.18.1"
flake8 = "^4.0.1"
black = ">=21.10b0"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.4.25"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^3.1.0"
pre-commit-hooks = "^4.2.0"
sphinx-click = "^4.0.3"
Pygments = "^2.12.0"
pyupgrade = "^2.32.0"
furo = ">=2021.11.12"
codecov = "^2.1.12"
pytest-sugar = "^0.9.4"
ipdb = "^0.13.9"

[tool.poetry.scripts]
pybox = "pyboxes.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["pybox", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 40

[tool.mypy]
strict = false
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
